[gd_scene load_steps=34 format=3 uid="uid://cu6rjjs1vtme8"]

[ext_resource type="Script" path="res://actors/king_pig.gd" id="1_cvj7d"]
[ext_resource type="Texture2D" uid="uid://dr1v2rtbp3kv" path="res://recursos/Sprites/02-King Pig/Hit (38x28).png" id="2_1h3kg"]
[ext_resource type="Texture2D" uid="uid://cv6wyurpa2lkr" path="res://recursos/Sprites/02-King Pig/Dead (38x28).png" id="3_yohos"]
[ext_resource type="Texture2D" uid="uid://can880l10qsxv" path="res://recursos/Sprites/02-King Pig/Idle (38x28).png" id="4_gyutn"]
[ext_resource type="Texture2D" uid="uid://dcagkem5ij5da" path="res://recursos/Sprites/13-Dialogue Boxes/Attack In (24x8).png" id="5_vrufa"]
[ext_resource type="Texture2D" uid="uid://xhmexkfqf05k" path="res://recursos/Sprites/13-Dialogue Boxes/!!! In (24x8).png" id="6_5ssf1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g221t"]
atlas = ExtResource("2_1h3kg")
region = Rect2(0, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs4vh"]
atlas = ExtResource("2_1h3kg")
region = Rect2(38, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_onphk"]
atlas = ExtResource("3_yohos")
region = Rect2(0, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ccvq"]
atlas = ExtResource("3_yohos")
region = Rect2(38, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohr4r"]
atlas = ExtResource("3_yohos")
region = Rect2(76, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7v3x"]
atlas = ExtResource("3_yohos")
region = Rect2(114, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hrqj"]
atlas = ExtResource("4_gyutn")
region = Rect2(0, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxfvt"]
atlas = ExtResource("4_gyutn")
region = Rect2(38, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5t4u"]
atlas = ExtResource("4_gyutn")
region = Rect2(76, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_clpvw"]
atlas = ExtResource("4_gyutn")
region = Rect2(114, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_h80gh"]
atlas = ExtResource("4_gyutn")
region = Rect2(152, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_367jx"]
atlas = ExtResource("4_gyutn")
region = Rect2(190, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_smnvt"]
atlas = ExtResource("4_gyutn")
region = Rect2(228, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfd22"]
atlas = ExtResource("4_gyutn")
region = Rect2(266, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8hxq"]
atlas = ExtResource("4_gyutn")
region = Rect2(304, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xv5q"]
atlas = ExtResource("4_gyutn")
region = Rect2(342, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_c204u"]
atlas = ExtResource("4_gyutn")
region = Rect2(380, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_32j77"]
atlas = ExtResource("4_gyutn")
region = Rect2(418, 0, 38, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_ieuym"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g221t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs4vh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g221t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs4vh")
}],
"loop": false,
"name": &"damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onphk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ccvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohr4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7v3x")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hrqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxfvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5t4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clpvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h80gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_367jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smnvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfd22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8hxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xv5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c204u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32j77")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_2xtjd"]
atlas = ExtResource("5_vrufa")
region = Rect2(0, 0, 34, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qmf8"]
atlas = ExtResource("5_vrufa")
region = Rect2(34, 0, 34, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm46l"]
atlas = ExtResource("5_vrufa")
region = Rect2(68, 0, 34, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_co4ck"]
atlas = ExtResource("6_5ssf1")
region = Rect2(0, 0, 34, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2j1l"]
atlas = ExtResource("6_5ssf1")
region = Rect2(34, 0, 34, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c15s8"]
atlas = ExtResource("6_5ssf1")
region = Rect2(68, 0, 34, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xps6t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xtjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qmf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm46l")
}],
"loop": true,
"name": &"attack_state",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_co4ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2j1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c15s8")
}],
"loop": true,
"name": &"damage_state",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2nht"]
size = Vector2(18, 20)

[node name="KingPig" type="StaticBody2D" groups=["inimigos"]]
position = Vector2(309, 182)
collision_layer = 4
script = ExtResource("1_cvj7d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ieuym")
animation = &"idle"
autoplay = "idle"

[node name="StateIndicator" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(-7, -13)
sprite_frames = SubResource("SpriteFrames_xps6t")
animation = &"damage_state"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 4)
shape = SubResource("RectangleShape2D_g2nht")
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackDurationTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RestTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="WaitBeforeAttack" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackDurationTimer" to="." method="_on_attack_duration_timer_timeout"]
[connection signal="timeout" from="RestTimer" to="." method="_on_rest_timer_timeout"]
[connection signal="timeout" from="WaitBeforeAttack" to="." method="_on_wait_before_attack_timeout"]
